--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-8">
+<div class="col-lg-12">
     <mat-card class="cardWithShadow">
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
@@ -6,92 +6,74 @@
                     List of Employees
                 </div>
                 <div>
-                    <button mat-raised-button color="primary" (click)="addEmployee()">Add Employee</button>
+                    <button mat-raised-button color="primary" >Add Employee</button>
                 </div>
             </mat-card-title>
             <div class="table-responsive m-t-16">
-                <table mat-table [dataSource]="dataSource" class="w-100">
+                <table mat-table [dataSource]="dataObs$ | async" class="w-100">
                     <!-- Position Column -->
-                    <ng-container matColumnDef="assigned">
+                    <ng-container matColumnDef="name">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-                            Assigned
+                            Name
                         </th>
-                        <td mat-cell *matCellDef="let element">
-                            <div class="d-flex align-items-center">
-                                <div class="m-l-16">
-                                    <h6 class="mat-subtitle-1 f-s-14 f-w-600">
-                                        {{ element.uname }}
-                                    </h6>
-                                    <span class="mat-body-1 f-s-12">
-                                        {{ element.position }}
-                                    </span>
-                                </div>
-                            </div>
+                        <td mat-cell *matCellDef="let element" class="mat-body-1">
+                            {{ element.employeeName }}
                         </td>
                     </ng-container>
 
                     <!-- Name Column -->
-                    <ng-container matColumnDef="name">
+                    <ng-container matColumnDef="age">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-                            Name
+                            Age
+                        </th>
+                        <td mat-cell *matCellDef="let element" class="mat-body-1">
+                            {{ element.employeeAge }}
+                        </td>
+                    </ng-container>
+
+                    <!-- Weight Column -->
+                    <ng-container matColumnDef="salary">
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+                            Salary
+                        </th>
+                        <td mat-cell *matCellDef="let element" class="mat-body-1">
+                            {{ element.employeeSalary }}
+                        </td>
+                    </ng-container>
+
+                    <!-- Symbol Column -->
+                    <ng-container matColumnDef="department">
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+                            Department
+                        </th>
+                        <td mat-cell *matCellDef="let element" class="mat-body-1">
+                            {{ element.departmentName }}
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="product">
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+                            Product
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
                             {{ element.productName }}
                         </td>
                     </ng-container>
 
-                    <!-- Weight Column -->
-                    <ng-container matColumnDef="priority">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-                            Priority
-                        </th>
-                        <td mat-cell *matCellDef="let element">
-                            <ng-template [ngIf]="element.priority == 'low'">
-                                <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">
-                                    {{ element.priority | titlecase }}
-                                </span>
-                            </ng-template>
-                            <ng-template [ngIf]="element.priority == 'medium'">
-                                <span class="bg-light-primary text-primary rounded f-w-600 p-6 p-y-4 f-s-12">
-                                    {{ element.priority | titlecase }}
-                                </span>
-                            </ng-template>
-                            <ng-template [ngIf]="element.priority == 'high'">
-                                <span class="bg-light-warning text-warning rounded f-w-600 p-6 p-y-4 f-s-12">
-                                    {{ element.priority | titlecase }}
-                                </span>
-                            </ng-template>
-                            <ng-template [ngIf]="element.priority == 'critical'">
-                                <span class="bg-light-error text-error rounded f-w-600 p-6 p-y-4 f-s-12">
-                                    {{ element.priority | titlecase }}
-                                </span>
-                            </ng-template>
-                            <ng-template [ngIf]="element.priority == 'moderate'">
-                                <span class="bg-light-success text-success rounded f-w-600 p-6 p-y-4 f-s-12">
-                                    {{ element.priority | titlecase }}
-                                </span>
-                            </ng-template>
-                        </td>
-                    </ng-container>
-
-                    <!-- Symbol Column -->
-                    <ng-container matColumnDef="budget">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-                            Budget
-                        </th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            ${{ element.budget }}k
-                        </td>
-                    </ng-container>
-
                     <!-- Action Column -->
-                    <ng-container matColumnDef="actions">
-                        <th mat-header-cell *matHeaderCellDef></th>
-                        <td mat-cell *matCellDef="let element">
-                            <button mat-icon-button color="primary" (click)="editEmployee()">
+                    <ng-container matColumnDef="edit">
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Edit</th>
+                        <td mat-cell *matCellDef="let element" class="mat-body-1">
+                            <button mat-icon-button color="primary" >
                                 <mat-icon>edit</mat-icon>
                             </button>
-                            <button mat-icon-button color="warn" (click)="deleteEmployee()">
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="delete">
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Delete</th>
+                        <td mat-cell *matCellDef="let element" class="mat-body-1">
+                            <button mat-icon-button color="warn" >
                                 <mat-icon>delete</mat-icon>
                             </button>
                         </td>
@@ -99,12 +81,9 @@
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
                 </table>
-
-
             </div>
         </mat-card-content>
-
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" > </mat-paginator>
     </mat-card>
 </div>
