--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -43,31 +43,28 @@
 
           <div class="or-border m-t-30">or sign in with</div> -->
 
-          <form class="m-t-30">
+          <form class="m-t-30" [formGroup]="loginForm" (ngSubmit)="login()">
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Username</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput />
+              <input matInput formControlName="userName" />
             </mat-form-field>
-            <!-- password -->
+          
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Password</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="password" />
+              <input matInput formControlName="password" type="password" />
             </mat-form-field>
-
-            <!-- <div class="d-flex align-items-center m-b-12">
-              <mat-checkbox color="primary">Remember this Device</mat-checkbox>
-              <a [routerLink]="['/']" class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14">Forgot Password
-                ?</a>
-            </div> -->
-            <a [routerLink]="['/dashboard']" mat-flat-button color="primary" class="w-100">
-              Sign In
-            </a>
-            <!-- input -->
+            <button mat-flat-button color="primary" class="w-100" type="submit">Sign In</button>
           </form>
+          <span class="d-block f-w-500 text-right m-t-10">
+            <a [routerLink]="['/authentication/admin-register']" class="text-decoration-none text-primary f-w-500 f-s-14 m-t-30">
+              Forgot Password?</a>
+          </span>
+
           <span class="d-block f-w-500 text-center m-t-24">Don't have one?
-            <a [routerLink]="['/authentication/register']" class="text-decoration-none text-primary f-w-500 f-s-14">
+            <a [routerLink]="['/authentication/admin-register']" class="text-decoration-none text-primary f-w-500 f-s-14">
               Create an account</a>
           </span>
+
         </mat-card-content>
       </mat-card>
     </div>
