--- a/src/app/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/pages/authentication/forgot-password/forgot-password.component.html
@@ -9,23 +9,44 @@
               </a>
             </div>
 
-            <form class="m-t-30"  [formGroup]="forgotPasswordForm" (ngSubmit)="forgotPassword()">
+            <form  *ngIf="!openOtpTemplate" class="m-t-30"  [formGroup]="forgotPasswordForm" (ngSubmit)="forgotPassword()">
          
               <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Email Adddress</mat-label>
               <mat-form-field appearance="outline" class="w-100" color="primary">
                 <input matInput type="email" formControlName="email"/>
               </mat-form-field>
 
-              <button type="submit" mat-flat-button color="primary" class="w-100">
-                Submit
+              <button type="submit" mat-flat-button [color]="isLoading ? 'white' : 'primary' " class="w-100">
+                <span *ngIf="!isLoading">Send OTP</span>
+                <mat-spinner *ngIf="isLoading"  diameter="24" ></mat-spinner>
               </button>
-                
+     
               <!-- input -->
             </form>
 
 
-            <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
+            <div *ngIf="openOtpTemplate">
+
+              <form class="m-t-30"  [formGroup]="verifyForm" (ngSubmit)="verifyOtp()">
+         
+                <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Please Enter Otp</mat-label>
+                <mat-form-field appearance="outline" class="w-100" color="primary">
+                  <input matInput type="text" formControlName="otp"/>
+                </mat-form-field>
   
+                <button type="submit" mat-flat-button color="primary" class="w-100">
+                  Submit
+                </button>
+
+                <span class="d-block f-w-500 text-right m-t-12">
+                  <div class="text-decoration-none f-w-500 f-s-14">{{ formatTime(countdown) }}</div>
+                </span>
+                <!-- input -->
+              </form>
+
+            </div>
+            <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
+    
               <a [routerLink]="['/authentication/login']" class="text-decoration-none text-primary f-w-500 f-s-14">
                 Sign In</a>
             </span>
