--- a/src/app/pages/authentication/verify/verify.component.html
+++ b/src/app/pages/authentication/verify/verify.component.html
@@ -8,7 +8,7 @@
                 <img src="./assets/images/logos/dark-logo.svg" class="align-middle m-2" alt="logo" />
               </a>
             </div>
-
+            <mat-card-title>We sent a code to your email</mat-card-title>
             <form class="m-t-30"  [formGroup]="verifyForm" (ngSubmit)="verify()">
          
               <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Email Adddress</mat-label>
