--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -6,7 +6,7 @@
                     List of Employees
                 </div>
                 <div>
-                    <button mat-raised-button color="primary" >Add Employee</button>
+                    <button mat-raised-button color="primary" (click)="OpenAddEditDialog()" >Add Employee</button>
                 </div>
             </mat-card-title>
             <div class="table-responsive m-t-16">
@@ -64,7 +64,7 @@
                     <ng-container matColumnDef="edit">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Edit</th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <button mat-icon-button color="primary" >
+                            <button mat-icon-button color="primary" (click)="OpenEditEmployee(element)">
                                 <mat-icon>edit</mat-icon>
                             </button>
                         </td>
@@ -73,7 +73,7 @@
                     <ng-container matColumnDef="delete">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Delete</th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <button mat-icon-button color="warn" >
+                            <button mat-icon-button color="warn" (click)="DeleteEmployee(element.id)">
                                 <mat-icon>delete</mat-icon>
                             </button>
                         </td>
