--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -170,10 +170,10 @@
       <mat-card-content class="p-24">
         <mat-card-title>Top Projects</mat-card-title>
         <div class="table-responsive m-t-16">
-          <table mat-table [dataSource]="dataObs$ | async" class="w-100">
+          <table matSort mat-table [dataSource]="dataSource" class="w-100">
             <!-- Position Column -->
             <ng-container matColumnDef="assigned">
-              <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+              <th  mat-sort-header  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                 Assigned
               </th>
               <td mat-cell *matCellDef="let element ">
@@ -193,7 +193,7 @@
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+              <th  mat-sort-header  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                 Name
               </th>
               <td mat-cell *matCellDef="let element " class="mat-body-1">
@@ -203,7 +203,7 @@
 
             <!-- Weight Column -->
             <ng-container matColumnDef="priority">
-              <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+              <th  mat-sort-header  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                 Priority
               </th>
               <td mat-cell *matCellDef="let element ">
@@ -237,7 +237,7 @@
 
             <!-- Symbol Column -->
             <ng-container matColumnDef="budget">
-              <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+              <th mat-sort-header mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                 Budget
               </th>
               <td mat-cell *matCellDef="let element " class="mat-body-1">
