--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -10,10 +10,10 @@
                 </div>
             </mat-card-title>
             <div class="table-responsive m-t-16">
-                <table mat-table [dataSource]="dataObs$ | async" class="w-100">
+                <table  mat-table [dataSource]="dataSource" class="w-100" matSort>
                     <!-- Position Column -->
                     <ng-container matColumnDef="name">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
                             Name
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -23,7 +23,7 @@
 
                     <!-- Name Column -->
                     <ng-container matColumnDef="age">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
                             Age
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -33,7 +33,7 @@
 
                     <!-- Weight Column -->
                     <ng-container matColumnDef="salary">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
                             Salary
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -43,7 +43,7 @@
 
                     <!-- Symbol Column -->
                     <ng-container matColumnDef="department">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
                             Department
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -52,7 +52,7 @@
                     </ng-container>
 
                     <ng-container matColumnDef="product">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
                             Product
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
