--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -73,7 +73,7 @@
                     <ng-container matColumnDef="delete">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Delete</th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <button mat-icon-button color="warn" (click)="DeleteEmployee(element.id)">
+                            <button mat-icon-button color="warn" (click)="DeleteEmployee(element.employeeID)">
                                 <mat-icon>delete</mat-icon>
                             </button>
                         </td>
