--- a/src/app/pages/manager/manager.component.html
+++ b/src/app/pages/manager/manager.component.html
@@ -3,10 +3,10 @@
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
                 <div layout="row" layout-align="center center">
-                    List of Employees
+                    List of Managers
                 </div>
                 <div>
-                    <button mat-raised-button color="primary" (click)="OpenAddEmployee()" >Add Employee</button>
+                    <button mat-raised-button color="primary" (click)="OpenAddManager()" >Add Manager</button>
                 </div>
             </mat-card-title>
             <div class="table-responsive m-t-16">
@@ -17,7 +17,7 @@
                             Name
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.employeeName }}
+                            {{ element.managerName }}
                         </td>
                     </ng-container>
 
@@ -27,7 +27,7 @@
                             Age
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.employeeAge }}
+                            {{ element.managerAge }}
                         </td>
                     </ng-container>
 
@@ -37,17 +37,7 @@
                             Salary
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.employeeSalary }}
-                        </td>
-                    </ng-container>
-
-                    <!-- Symbol Column -->
-                    <ng-container matColumnDef="department">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-                            Department
-                        </th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.departmentName }}
+                            {{ element.managerSalary }}
                         </td>
                     </ng-container>
 
@@ -64,7 +54,7 @@
                     <ng-container matColumnDef="edit">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Edit</th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <button mat-icon-button color="primary" (click)="OpenEditEmployee(element)">
+                            <button mat-icon-button color="primary" (click)="OpenEditManager(element)">
                                 <mat-icon>edit</mat-icon>
                             </button>
                         </td>
@@ -73,7 +63,7 @@
                     <ng-container matColumnDef="delete">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Delete</th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <button mat-icon-button color="warn" (click)="DeleteEmployee(element.employeeID)">
+                            <button mat-icon-button color="warn" (click)="DeleteManager(element.managerId)">
                                 <mat-icon>delete</mat-icon>
                             </button>
                         </td>
