--- a/src/app/pages/authentication/reset-password/reset-password.component.html
+++ b/src/app/pages/authentication/reset-password/reset-password.component.html
@@ -15,13 +15,35 @@
               <mat-form-field appearance="outline" class="w-100" color="primary">
                 <input matInput type="password" formControlName="newPassword"/>
               </mat-form-field>
+              <div class="error-container">
+                <div *ngIf="newPassword?.touched && newPassword?.errors?.['required']">
+                  <mat-error class="custom-error">
+                    New Password is <strong>required</strong>
+                  </mat-error>
+                </div>
+                <div *ngIf="newPassword?.errors?.['pattern']">
+                  <mat-error class="custom-error">
+                    Password should have at least 8 characters, one special character, and one number
+                  </mat-error>
+                </div>
+              </div>
 
               <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Confirm Password</mat-label>
               <mat-form-field appearance="outline" class="w-100" color="primary">
-                <input matInput type="password" formControlName="confirmPassword"/>
+                <input matInput type="password" formControlName="confirmPassword" />
               </mat-form-field>
-
-
+  
+              <div class="error-container">
+                <div *ngIf="confirmPassword?.touched && confirmPassword?.errors?.['required']">
+                  <mat-error class="custom-error">
+                    Confirm Password is <strong>required</strong>
+                  </mat-error>
+                </div>
+                <mat-error class="custom-error" *ngIf="resetPasswordForm.hasError('passwordMismatch')">
+                  Passwords do not match
+                </mat-error>
+              </div>
+            
               <button type="submit" mat-flat-button color="primary" class="w-100">
                 Submit
               </button>
