--- a/src/app/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/pages/authentication/forgot-password/forgot-password.component.html
@@ -13,17 +13,39 @@
          
               <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Email Adddress</mat-label>
               <mat-form-field appearance="outline" class="w-100" color="primary">
-                <input matInput type="email" formControlName="email"/>
+                <input matInput type="email" formControlName="email" placeholder="sample@mail.com"/>
               </mat-form-field>
+              <div class="error-container">
+                <div *ngIf="email?.touched && email?.errors?.['required']">
+                  <mat-error class="custom-error">
+                    Email is <strong>required</strong>
+                  </mat-error>
+                </div>
+                <div *ngIf="email?.errors?.['pattern']">
+                  <mat-error class="custom-error">
+                    Email should have a valid format
+                  </mat-error>
+                </div>
+                <div *ngIf="email?.hasError('emailNotFound')">
+                  <mat-error >
+                    Email Not Found. Please try again.
+                  </mat-error>
+                </div>
+              </div>
+              
 
-              <button type="submit" mat-flat-button [color]="isLoading ? 'white' : 'primary' " class="w-100">
-                <span *ngIf="!isLoading">Send OTP</span>
-                <mat-spinner *ngIf="isLoading"  diameter="24" ></mat-spinner>
-              </button>
+              <!-- <button type="submit" mat-flat-button [color]="isLoading ? 'white' : 'primary' " class="w-100">
+                 <span>Send OTP</span>
+                  <mat-spinner *ngIf="isLoading"  diameter="24" ></mat-spinner> 
+              </button> -->
+
+              <button type="submit" mat-flat-button class="w-100" color="primary">
+                <span>Send OTP</span>
+              <!-- <mat-spinner *ngIf="isLoading"  diameter="24" ></mat-spinner> -->
+             </button>
      
               <!-- input -->
             </form>
-
 
             <div *ngIf="openOtpTemplate">
 
@@ -31,17 +53,38 @@
          
                 <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Please Enter Otp</mat-label>
                 <mat-form-field appearance="outline" class="w-100" color="primary">
-                  <input matInput type="text" formControlName="otp"/>
+                  <input matInput type="text" formControlName="otp" placeholder="Otp"/>
                 </mat-form-field>
-  
+                <div class="error-container">
+                  <div *ngIf="otp?.touched && otp?.errors?.['required']">
+                    <mat-error class="custom-error">
+                      OTP is <strong>required</strong>
+                    </mat-error>
+                  </div>
+                  <div *ngIf="otp?.hasError('invalidOtp')">
+                    <mat-error >
+                      Invalid Otp. Please try again.
+                    </mat-error>
+                  </div>
+                  <div *ngIf="otp?.hasError('otpExpired')">
+                    <mat-error >
+                      Otp has been expired. Please try again.
+                    </mat-error>
+                  </div>
+                </div>
                 <button type="submit" mat-flat-button color="primary" class="w-100">
                   Submit
                 </button>
 
-                <span class="d-block f-w-500 text-right m-t-12">
-                  <div class="text-decoration-none f-w-500 f-s-14">{{ formatTime(countdown) }}</div>
+                <span class="d-block f-w-500 text-right m-t-12 d-flex justify-content-between">
+                  <div class="text-decoration-none f-w-500 f-s-14">
+                    <a class="text-decoration-none f-w-500 f-s-14" (click)="resendOTP()" style="cursor: pointer; text-decoration: underline;">Resend OTP</a>
+                  </div>
+                  <div class="text-decoration-none f-w-500 f-s-14" style="color: red">
+                    Your OTP expired in {{ formatTime(countdown) }}
+                  </div>
                 </span>
-                <!-- input -->
+                   <!-- input -->
               </form>
 
             </div>
