--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -46,25 +46,66 @@
           <form class="m-t-30" [formGroup]="loginForm" (ngSubmit)="login()">
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Username</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput formControlName="userName" />
+              <input type="email" matInput formControlName="userName" [errorStateMatcher]="getErrorStateMatcher()" placeholder="Username"/>
             </mat-form-field>
-          
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Password</mat-label>
+            <div class="error-container">
+              <div *ngIf="getUsername()?.touched && getUsername()?.errors?.['required']">
+                <mat-error class="custom-error">
+                  Username is <strong>required</strong>
+                </mat-error>
+              </div>
+              <div *ngIf="getUsername()?.errors?.['pattern']">
+                <mat-error class="custom-error">
+                  Username should have at least 5 characters with the first letter as uppercase, and no spaces or special characters allowed.
+                </mat-error>
+              </div>
+              <div *ngIf="!getUsername()?.hasError('userNotFound') && !getUsername()?.errors?.['required'] && !getUsername()?.errors?.['pattern'] && getUsername()?.dirty">
+                <mat-error class="custom-success">
+                  Username is valid!
+                </mat-error>
+              </div>
+              <div *ngIf="getUsername()?.hasError('userNotFound')">
+                <mat-error >
+                  User not found. Please check your username.
+                </mat-error>
+              </div>
+            </div>
+            
+
+            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block ">Password</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput formControlName="password" type="password" />
+              <input matInput formControlName="password" type="password" placeholder="Password"/>
             </mat-form-field>
+            <div class="error-container">
+              <div *ngIf="getPassword()?.touched && getPassword()?.errors?.['required']">
+                <mat-error class="custom-error">
+                  Password is <strong>required</strong>
+                </mat-error>
+              </div>
+              <div *ngIf="getPassword()?.errors?.['pattern']">
+                <mat-error class="custom-error">
+                  Password should have at least 8 characters, one special character, and one number
+                </mat-error>
+              </div>
+              <div *ngIf="!getPassword()?.hasError('incorrectPassword') && !getPassword()?.errors?.['required'] && !getPassword()?.errors?.['pattern'] && getPassword()?.dirty">
+                <mat-error class="custom-success">
+                  Password is valid!
+                </mat-error>
+              </div>
+              <div *ngIf="getPassword()?.hasError('incorrectPassword')">
+                <mat-error >
+                  Incorrect Password. Please try again.
+                </mat-error>
+              </div>
+            </div>
+
+
             <button mat-flat-button color="primary" class="w-100" type="submit">Sign In</button>
           </form>
           <span class="d-block f-w-500 text-right m-t-10">
             <a [routerLink]="['/authentication/forgot-password']" class="text-decoration-none text-primary f-w-500 f-s-14 m-t-30">
               Forgot Password?</a>
           </span>
-
-          <span class="d-block f-w-500 text-center m-t-24">Don't have one?
-            <a [routerLink]="['/authentication/admin-register']" class="text-decoration-none text-primary f-w-500 f-s-14">
-              Create an account</a>
-          </span>
-
         </mat-card-content>
       </mat-card>
     </div>
