--- a/src/app/pages/department/department.component.html
+++ b/src/app/pages/department/department.component.html
@@ -3,7 +3,7 @@
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
                 <div layout="row" layout-align="center center">
-                    List of Departments
+                    Departments
                 </div>
                 <div>
                     <button mat-raised-button color="primary" (click)="OpenAddDepartment()" >Add Department</button>
