--- a/src/app/pages/manager/dialog/manager-add/manager-add.component.html
+++ b/src/app/pages/manager/dialog/manager-add/manager-add.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-    <h1>Manager Form</h1>
+    <h1>Create Manager</h1>
 </div>
 <form [formGroup]="managerForm" (ngSubmit)="onSubmit()">
     <div mat-dialog-content class="content">
