--- a/src/app/pages/product/dialog/product-edit/product-edit.component.html
+++ b/src/app/pages/product/dialog/product-edit/product-edit.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-    <h1>Product Form</h1>
+    <h1>Edit Product</h1>
 </div>
 <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
     <div mat-dialog-content class="content">
