--- a/src/app/pages/customer/customer.component.html
+++ b/src/app/pages/customer/customer.component.html
@@ -3,7 +3,7 @@
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
                 <div layout="row" layout-align="center center">
-                    List of Customers
+                    Customers
                 </div>
                 <div>
                     <button mat-raised-button color="primary" (click)="OpenAddCustomerDialog()" >Add Customer</button>
