--- a/src/app/pages/customer/dialog/customer-add/customer-add.component.html
+++ b/src/app/pages/customer/dialog/customer-add/customer-add.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-    <h1>Customer Form</h1>
+    <h1>Create Customer</h1>
 </div>
 <form [formGroup]="customerForm" (ngSubmit)="onSubmit()">
     <div mat-dialog-content class="content">
@@ -18,16 +18,13 @@
                 <mat-label>Email</mat-label>
                 <input matInput type="text" formControlName="customerEmail">
             </mat-form-field>
-        </div> <br> 
-        <div class="row">
-        <mat-form-field appearance="outline">
-            <mat-label>Product</mat-label>
-            <mat-select formControlName="productID">
-                <mat-option *ngFor="let product of products" [value]="product.productID"> {{product.productName}} </mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div><br> 
-    
+            <mat-form-field appearance="outline">
+                <mat-label>Product</mat-label>
+                <mat-select formControlName="productID">
+                    <mat-option *ngFor="let product of products" [value]="product.productID"> {{product.productName}} </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div> <br>  
     </div>
     <div mat-dialog-actions class="action">
         <button mat-raised-button type="button" [mat-dialog-close]="false"> Cancel</button>
