--- a/src/app/pages/department/dialog/department-edit/department-edit.component.scss
+++ b/src/app/pages/department/dialog/department-edit/department-edit.component.scss
@@ -1,5 +1,11 @@
-.title-flex-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.content {
+    padding-top: 10px;
+}
+
+.action {
+    padding: 0px 25px 20px;
+
+    button {
+        flex: 1;
+    }
 }
