--- a/src/app/pages/employee/dialog/employee-add/employee-add.component.scss
+++ b/src/app/pages/employee/dialog/employee-add/employee-add.component.scss
@@ -1,20 +1,16 @@
-// .content {
-//     padding-top: 10px;
-// }
+.content {
+    padding-top: 10px;
+}
 
-// .row {
-//     display: flex;
-//     gap: 20px;
+.row {
+    display: flex;
+    gap: 10px;
+}
 
-//     mat-form-field {
-//         width: 100%;
-//     }
-// }
+.action {
+    padding: 0px 25px 20px;
 
-// .action {
-//     padding: 0px 25px 20px;
-
-//     button {
-//         flex: 1;
-//     }
-// }
+    button {
+        flex: 1;
+    }
+}
