--- a/src/app/pages/employee/dialog/employee-edit/employee-edit.component.html
+++ b/src/app/pages/employee/dialog/employee-edit/employee-edit.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-    <h1>Employee Form</h1>
+    <h1>Edit Employee</h1>
 </div>
 <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
     <div mat-dialog-content class="content">
