--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -3,7 +3,7 @@
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
                 <div layout="row" layout-align="center center">
-                    List of Employees
+                    Employees
                 </div>
                 <div>
                     <button mat-raised-button color="primary" (click)="OpenAddEmployee()" >Add Employee</button>
