--- a/src/app/pages/manager/manager.component.html
+++ b/src/app/pages/manager/manager.component.html
@@ -3,7 +3,7 @@
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
                 <div layout="row" layout-align="center center">
-                    List of Managers
+                    Managers
                 </div>
                 <div>
                     <button mat-raised-button color="primary" (click)="OpenAddManager()" >Add Manager</button>
