--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -3,7 +3,7 @@
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
                 <div layout="row" layout-align="center center">
-                    List of Products
+                    Products
                 </div>
                 <div>
                     <button mat-raised-button color="primary" (click)="OpenAddProductDialog()" >Add Product</button>
