--- a/src/assets/scss/pages/_dashboards.scss
+++ b/src/assets/scss/pages/_dashboards.scss
@@ -111,3 +111,10 @@
   right: 16px;
   top: -21px;
 }
+
+.title-flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
