--- a/src/app/pages/employee/dialog/employee-add/employee-add.component.html
+++ b/src/app/pages/employee/dialog/employee-add/employee-add.component.html
@@ -3,17 +3,17 @@
     <h1>Create Employee</h1>
 </div>
 <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()" >
-    <div mat-dialog-content class="content">
-        <div class="row">
+    <div mat-dialog-content class="content ">
+        <div class="row ">
             <div>
-            <mat-form-field appearance="outline" class="w-100">
+            <mat-form-field appearance="outline" class="form-feild-width">
                 <mat-label>Email Id</mat-label>
-                <input matInput type="text" formControlName="email" class="w-100">
+                <input matInput type="text" formControlName="email" >
               
             </mat-form-field>
             <div class="error-container" >
                 <div *ngIf="email?.touched && email?.hasError('required')">
-                  <mat-error class="custom-error" class="w-100">
+                  <mat-error class="custom-error">
                     Email is <strong>required</strong>
                   </mat-error>
                 </div>
@@ -26,9 +26,9 @@
             </div>
 
             <div>
-            <mat-form-field appearance="outline"  class="w-100">
+            <mat-form-field appearance="outline" class="form-feild-width">
                 <mat-label>User Name</mat-label>
-                <input matInput type="text" formControlName="userName" class="w-100">
+                <input matInput type="text" formControlName="userName" >
             </mat-form-field>
             <div class="error-container">
                 <div *ngIf="userName?.touched && userName?.errors?.['required']">
@@ -38,7 +38,7 @@
                 </div>
                 <div *ngIf="userName?.errors?.['pattern']">
                     <mat-error class="custom-error">
-                      Username should have at least 5 characters with the first letter as uppercase, and no spaces or special characters allowed.
+                      Username should have at least 5 characters and no spaces or special characters allowed.
                     </mat-error>
                 </div>
             </div>
@@ -49,7 +49,7 @@
          <div class="row">
 
             <div>
-            <mat-form-field appearance="outline" >
+            <mat-form-field appearance="outline" class="form-feild-width">
                 <mat-label>Password</mat-label>
                 <input matInput type="text" formControlName="password">
             </mat-form-field>
@@ -68,7 +68,7 @@
             </div>
 
             <div>
-            <mat-form-field appearance="outline" >
+            <mat-form-field appearance="outline" class="form-feild-width">
                 <mat-label>Name</mat-label>
                 <input matInput type="text" formControlName="employeeName">
             </mat-form-field>
@@ -89,7 +89,7 @@
         </div> <br>
         <div class="row">
             <div>
-                <mat-form-field appearance="outline" >
+                <mat-form-field appearance="outline" class="form-feild-width">
                     <mat-label>Age</mat-label>
                     <input matInput type="number" formControlName="employeeAge">
                 </mat-form-field>
@@ -108,7 +108,7 @@
             </div>
             
             <div>
-                <mat-form-field appearance="outline">
+                <mat-form-field appearance="outline" class="form-feild-width">
                     <mat-label>Salary</mat-label>
                     <input matInput type="number" formControlName="employeeSalary">
                 </mat-form-field>
@@ -124,7 +124,7 @@
         </div> <br>
         <div class="row">
             <div>
-                <mat-form-field appearance="outline">
+                <mat-form-field appearance="outline" class="form-feild-width">
                     <mat-label>Department</mat-label>
                     <mat-select formControlName="departmentID">
                         <mat-option *ngFor="let department of departments" [value]="department.departmentID">
@@ -142,7 +142,7 @@
             </div>
 
             <div>
-                <mat-form-field appearance="outline">
+                <mat-form-field appearance="outline" class="form-feild-width">
                     <mat-label>Product</mat-label>
                     <mat-select formControlName="productID">
                         <mat-option *ngFor="let product of products" [value]="product.productID"> {{product.productName}}
