--- a/src/assets/scss/pages/_auth.scss
+++ b/src/assets/scss/pages/_auth.scss
@@ -89,4 +89,6 @@
   flex-direction: column;
   margin-top: -15px; /* Adjust the value as needed */
   margin-bottom: 10px;
+  max-width: 400px; /* Adjust the value as needed */
+
 }
