--- a/src/app/pages/employee/dialog/employee-add/employee-add.component.html
+++ b/src/app/pages/employee/dialog/employee-add/employee-add.component.html
@@ -38,7 +38,7 @@
                 </div>
                 <div *ngIf="userName?.errors?.['pattern']">
                     <mat-error class="custom-error">
-                      Username should have at least 5 characters and no spaces or special characters allowed.
+                        Username should have at least 6 characters and no spaces allowed.
                     </mat-error>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                 </div>
                 <div *ngIf="employeeName?.errors?.['pattern']">
                     <mat-error class="custom-error">
-                        Employee Name should have at least 5 characters with the first letter as uppercase, and no spaces or special characters allowed.
+                        Username should have at least 6 characters and no spaces allowed.
                     </mat-error>
                 </div>
             </div>
