--- a/src/app/pages/employee/dialog/employee-add/employee-add.component.html
+++ b/src/app/pages/employee/dialog/employee-add/employee-add.component.html
@@ -1,167 +1,168 @@
 <div class="w-100">
-<div mat-dialog-title >
-    <h1>Create Employee</h1>
-</div>
-<form [formGroup]="employeeForm" (ngSubmit)="onSubmit()" >
-    <div mat-dialog-content class="content ">
-        <div class="row ">
-            <div>
-            <mat-form-field appearance="outline" class="form-feild-width">
-                <mat-label>Email Id</mat-label>
-                <input matInput type="text" formControlName="email" >
-              
-            </mat-form-field>
-            <div class="error-container" >
-                <div *ngIf="email?.touched && email?.hasError('required')">
-                  <mat-error class="custom-error">
-                    Email is <strong>required</strong>
-                  </mat-error>
-                </div>
-                <div *ngIf="email?.hasError('pattern')">
-                    <mat-error class="custom-error">
-                      Email should have a valid format
-                    </mat-error>
-                  </div>
-            </div>
-            </div>
-
-            <div>
-            <mat-form-field appearance="outline" class="form-feild-width">
-                <mat-label>User Name</mat-label>
-                <input matInput type="text" formControlName="userName" >
-            </mat-form-field>
-            <div class="error-container">
-                <div *ngIf="userName?.touched && userName?.errors?.['required']">
-                    <mat-error class="custom-error">
-                    Username is <strong>required</strong>
-                    </mat-error>
-                </div>
-                <div *ngIf="userName?.errors?.['pattern']">
-                    <mat-error class="custom-error">
-                        Username should have at least 6 characters and no spaces allowed.
-                    </mat-error>
-                </div>
-            </div>
-            </div>
-
-        </div>
-         <br>
-         <div class="row">
-
-            <div>
-            <mat-form-field appearance="outline" class="form-feild-width">
-                <mat-label>Password</mat-label>
-                <input matInput type="text" formControlName="password">
-            </mat-form-field>
-            <div class="error-container">
-                <div *ngIf="password?.touched && password?.errors?.['required']">
-                    <mat-error class="custom-error">
-                        Password is <strong>required</strong>
-                    </mat-error>
-                </div>
-                <div *ngIf="password?.errors?.['pattern']">
-                    <mat-error class="custom-error">
-                      Password should have at least 8 characters, one special character, and one number
-                    </mat-error>
-                  </div>
-            </div>
-            </div>
-
-            <div>
-            <mat-form-field appearance="outline" class="form-feild-width">
-                <mat-label>Name</mat-label>
-                <input matInput type="text" formControlName="employeeName">
-            </mat-form-field>
-            <div class="error-container">        
-                <div *ngIf="employeeName?.touched && employeeName?.errors?.['required']">
-                    <mat-error class="custom-error">
-                        Employee Name is <strong>required</strong>
-                    </mat-error>
-                </div>
-                <div *ngIf="employeeName?.errors?.['pattern']">
-                    <mat-error class="custom-error">
-                        Username should have at least 6 characters and no spaces allowed.
-                    </mat-error>
-                </div>
-            </div>
-            </div>
-
-        </div> <br>
-        <div class="row">
-            <div>
-                <mat-form-field appearance="outline" class="form-feild-width">
-                    <mat-label>Age</mat-label>
-                    <input matInput type="number" formControlName="employeeAge">
-                </mat-form-field>
-                <div class="error-container">             
-                    <div *ngIf="employeeAge?.touched && employeeAge?.errors?.['required']">
-                        <mat-error class="custom-error">
-                            employeeAge is <strong>required</strong>
-                        </mat-error>
-                    </div>
-                    <div *ngIf="employeeAge?.errors?.['invalidAge']">
-                        <mat-error class="custom-error">
-                          Age should be greater than 20
-                        </mat-error>
-                      </div>
-                </div>
-            </div>
-            
-            <div>
-                <mat-form-field appearance="outline" class="form-feild-width">
-                    <mat-label>Salary</mat-label>
-                    <input matInput type="number" formControlName="employeeSalary">
-                </mat-form-field>
-                <div class="error-container">      
-                    <div *ngIf="employeeSalary?.touched && employeeSalary?.errors?.['required']">
-                        <mat-error class="custom-error">
-                            employeeSalary is <strong>required</strong>
-                        </mat-error>
-                    </div>
-                </div>
-            </div>
-
-        </div> <br>
-        <div class="row">
-            <div>
-                <mat-form-field appearance="outline" class="form-feild-width">
-                    <mat-label>Department</mat-label>
-                    <mat-select formControlName="departmentID">
-                        <mat-option *ngFor="let department of departments" [value]="department.departmentID">
-                            {{department.departmentName}} </mat-option>
-                    </mat-select>
-                </mat-form-field>
-
-                <div class="error-container">       
-                    <div *ngIf="departmentID?.touched && departmentID?.errors?.['required']">
-                        <mat-error class="custom-error">
-                            departmentID is <strong>required</strong>
-                        </mat-error>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <mat-form-field appearance="outline" class="form-feild-width">
-                    <mat-label>Product</mat-label>
-                    <mat-select formControlName="productID">
-                        <mat-option *ngFor="let product of products" [value]="product.productID"> {{product.productName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <div class="error-container">      
-                    <div *ngIf="productID?.touched && productID?.errors?.['required']">
-                        <mat-error class="custom-error">
-                            productID is <strong>required</strong>
-                        </mat-error>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div mat-dialog-title>
+        <h1>Create Employee</h1>
     </div>
-    <div mat-dialog-actions class="action">
-        <button mat-raised-button type="button" [mat-dialog-close]="false">Cancel</button>
-        <button mat-raised-button color="primary" type="submit">Create</button>
-    </div>
-</form>
+    <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
+        <div mat-dialog-content class="content ">
+            <div class="row ">
+                <div>
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label>Email Id</mat-label>
+                        <input matInput type="text" formControlName="email">
+
+                    </mat-form-field>
+                    <div class="error-container">
+                        <div *ngIf="email?.touched && email?.hasError('required')">
+                            <mat-error class="custom-error">
+                                Email is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                        <div *ngIf="email?.hasError('pattern')">
+                            <mat-error class="custom-error">
+                                Email should have a valid format
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label>User Name</mat-label>
+                        <input matInput type="text" formControlName="userName">
+                    </mat-form-field>
+                    <div class="error-container">
+                        <div *ngIf="userName?.touched && userName?.errors?.['required']">
+                            <mat-error class="custom-error">
+                                Username is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                        <div *ngIf="userName?.errors?.['pattern']">
+                            <mat-error class="custom-error">
+                                Username should have at least 6 characters and no spaces allowed.
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <br>
+            <div class="row">
+
+                <div>
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label>Password</mat-label>
+                        <input matInput type="text" formControlName="password">
+                    </mat-form-field>
+                    <div class="error-container">
+                        <div *ngIf="password?.touched && password?.errors?.['required']">
+                            <mat-error class="custom-error">
+                                Password is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                        <div *ngIf="password?.errors?.['pattern']">
+                            <mat-error class="custom-error">
+                                Password should have at least 8 characters, one special character, and one number
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label>Name</mat-label>
+                        <input matInput type="text" formControlName="employeeName">
+                    </mat-form-field>
+                    <div class="error-container">
+                        <div *ngIf="employeeName?.touched && employeeName?.errors?.['required']">
+                            <mat-error class="custom-error">
+                                Name is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                        <div *ngIf="employeeName?.errors?.['pattern']">
+                            <mat-error class="custom-error">
+                                Username should have at least 6 characters and no spaces allowed.
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+
+            </div> <br>
+            <div class="row">
+                <div>
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label>Age</mat-label>
+                        <input matInput type="number" formControlName="employeeAge">
+                    </mat-form-field>
+                    <div class="error-container">
+                        <div *ngIf="employeeAge?.touched && employeeAge?.errors?.['required']">
+                            <mat-error class="custom-error">
+                                Age is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                        <div *ngIf="employeeAge?.errors?.['invalidAge']">
+                            <mat-error class="custom-error">
+                                Age should be greater than 20
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label>Salary</mat-label>
+                        <input matInput type="number" formControlName="employeeSalary">
+                    </mat-form-field>
+                    <div class="error-container">
+                        <div *ngIf="employeeSalary?.touched && employeeSalary?.errors?.['required']">
+                            <mat-error class="custom-error">
+                                Salary is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+
+            </div> <br>
+            <div class="row">
+                <div>
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label>Department</mat-label>
+                        <mat-select formControlName="departmentID">
+                            <mat-option *ngFor="let department of departments" [value]="department.departmentID">
+                                {{department.departmentName}} </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                    <div class="error-container">
+                        <div *ngIf="departmentID?.touched && departmentID?.errors?.['required']">
+                            <mat-error class="custom-error">
+                                Department is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label>Product</mat-label>
+                        <mat-select formControlName="productID">
+                            <mat-option *ngFor="let product of products" [value]="product.productID">
+                                {{product.productName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <div class="error-container">
+                        <div *ngIf="productID?.touched && productID?.errors?.['required']">
+                            <mat-error class="custom-error">
+                                Product is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div mat-dialog-actions class="action">
+            <button mat-raised-button type="button" [mat-dialog-close]="false">Cancel</button>
+            <button mat-raised-button color="primary" type="submit">Create</button>
+        </div>
+    </form>
 </div>
