--- a/src/app/pages/employee/dialog/employee-edit/employee-edit.component.html
+++ b/src/app/pages/employee/dialog/employee-edit/employee-edit.component.html
@@ -4,38 +4,93 @@
 <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
     <div mat-dialog-content class="content">
         <div class="row">
-            <mat-form-field appearance="outline">
-                <mat-label>Name</mat-label>
-                <input matInput type="text" formControlName="employeeName">
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Salary</mat-label>
-                <input matInput type="number" formControlName="employeeSalary">
-            </mat-form-field>         
+            <div>
+                <mat-form-field appearance="outline" class="form-field-width">
+                    <mat-label>Name</mat-label>
+                    <input matInput type="text" formControlName="employeeName">
+                </mat-form-field>
+                <div class="error-container">
+                    <div *ngIf="employeeName?.touched && employeeName?.errors?.['required']">
+                        <mat-error class="custom-error">
+                            Name is <strong>required</strong>
+                        </mat-error>
+                    </div>
+                    <div *ngIf="employeeName?.errors?.['pattern']">
+                        <mat-error class="custom-error">
+                            Name should have at least 6 characters and no spaces allowed.
+                        </mat-error>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <mat-form-field appearance="outline" class="form-field-width">
+                    <mat-label>Salary</mat-label>
+                    <input matInput type="number" formControlName="employeeSalary">
+                </mat-form-field>
+                <div class="error-container">
+                    <div *ngIf="employeeSalary?.touched && employeeSalary?.errors?.['required']">
+                        <mat-error class="custom-error">
+                            Salary is <strong>required</strong>
+                        </mat-error>
+                    </div>
+                </div>
+            </div>
         </div> <br>
         <div class="row">
-            <mat-form-field appearance="outline">
-                <mat-label>Age</mat-label>
-                <input matInput type="number" formControlName="employeeAge">
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Department</mat-label>
-                <mat-select formControlName="departmentID">
-                    <mat-option *ngFor="let department of departments" [value]="department.departmentID">
-                      {{ department.departmentName }}
-                    </mat-option>
-                  </mat-select>
-            </mat-form-field>
-        </div> <br> 
+            <div>
+                <mat-form-field appearance="outline" class="form-field-width">
+                    <mat-label>Age</mat-label>
+                    <input matInput type="number" formControlName="employeeAge">
+                </mat-form-field>
+                <div class="error-container">
+                    <div *ngIf="employeeAge?.touched && employeeAge?.errors?.['required']">
+                        <mat-error class="custom-error">
+                            Age is <strong>required</strong>
+                        </mat-error>
+                    </div>
+                    <div *ngIf="employeeAge?.errors?.['invalidAge']">
+                        <mat-error class="custom-error">
+                            Age should be greater than 20
+                        </mat-error>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <mat-form-field appearance="outline" class="form-field-width">
+                    <mat-label>Department</mat-label>
+                    <mat-select formControlName="departmentID">
+                        <mat-option *ngFor="let department of departments" [value]="department.departmentID">
+                            {{ department.departmentName }}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <div class="error-container">
+                    <div *ngIf="departmentID?.touched && departmentID?.errors?.['required']">
+                        <mat-error class="custom-error">
+                            departmentID is <strong>required</strong>
+                        </mat-error>
+                    </div>
+                </div>
+            </div>
+        </div> <br>
         <div class="row">
-            <mat-form-field appearance="outline">
-                <mat-label>Product</mat-label>
-                <mat-select formControlName="productID">
-                    <mat-option *ngFor="let product of products" [value]="product.productID">
-                      {{ product.productName }}
-                    </mat-option>
-                  </mat-select>
-            </mat-form-field>
+            <div>
+                <mat-form-field appearance="outline" class="form-field-width">
+                    <mat-label>Product</mat-label>
+                    <mat-select formControlName="productID">
+                        <mat-option *ngFor="let product of products" [value]="product.productID">
+                            {{ product.productName }}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <div class="error-container">
+                    <div *ngIf="productID?.touched && productID?.errors?.['required']">
+                        <mat-error class="custom-error">
+                            productID is <strong>required</strong>
+                        </mat-error>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div mat-dialog-actions class="action">
