--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -10,7 +10,7 @@
                         <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
                 </mat-form-field>
                 <div>
-                    <button mat-raised-button color="primary" (click)="OpenAddEmployee()" >Add Employee</button>
+                    <button mat-raised-button color="primary" (click)="OpenAddEmployee()" >Create</button>
                 </div>
             </mat-card-title>
             <div class="table-responsive m-t-16">
