Complete Form Validation for department and product

--- a/src/app/pages/employee/dialog/employee-add/employee-add.component.html
+++ b/src/app/pages/employee/dialog/employee-add/employee-add.component.html
@@ -80,7 +80,7 @@
                         </div>
                         <div *ngIf="employeeName?.errors?.['pattern']">
                             <mat-error class="custom-error">
-                                Username should have at least 6 characters and no spaces allowed.
+                                Name should have at least 6 characters and no spaces allowed.
                             </mat-error>
                         </div>
                     </div>
