--- a/src/app/pages/department/dialog/department-add/department-add.component.html
+++ b/src/app/pages/department/dialog/department-add/department-add.component.html
@@ -3,13 +3,25 @@
 </div>
 <form [formGroup]="departmentForm" (ngSubmit)="onSubmit()">
     <div mat-dialog-content class="content">
-        <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Name</mat-label>
-            <input matInput type="text" formControlName="departmentName">
-        </mat-form-field>
-        <div mat-dialog-actions class="action">
-            <button mat-raised-button type="button" [mat-dialog-close]="false"> Cancel</button>
-            <button mat-raised-button color="primary" type="submit"> Create</button>
-        </div>
+            <mat-form-field appearance="outline" class="form-field-width">
+                <mat-label>Name</mat-label>
+                <input matInput type="text" formControlName="departmentName">
+            </mat-form-field>   
+            <div class="error-container">
+                <div *ngIf="departmentName?.touched && departmentName?.errors?.['required']">
+                    <mat-error class="custom-error">
+                        Name is <strong>required</strong>
+                    </mat-error>
+                </div>
+                <div *ngIf="departmentName?.errors?.['pattern']">
+                    <mat-error class="custom-error">
+                        Name should have at least 6 characters and no spaces allowed.
+                    </mat-error>
+                </div>
+            </div>     
+    </div>
+    <div mat-dialog-actions class="action">
+        <button mat-raised-button type="button" [mat-dialog-close]="false"> Cancel</button>
+        <button mat-raised-button color="primary" type="submit"> Update </button>
     </div>
 </form>
