Validation completed for customer

--- a/src/app/pages/manager/dialog/manager-add/manager-add.component.html
+++ b/src/app/pages/manager/dialog/manager-add/manager-add.component.html
@@ -32,7 +32,7 @@
                 <div class="error-container">
                     <div *ngIf="userName?.touched && userName?.errors?.['required']">
                         <mat-error class="custom-error">
-                            Username is <strong>required</strong>
+                            User Name is <strong>required</strong>
                         </mat-error>
                     </div>
                     <div *ngIf="userName?.errors?.['pattern']">
