Add delete confirm dialog to all tables

--- a/src/app/pages/confirm-delete/confirm-delete.component.html
+++ b/src/app/pages/confirm-delete/confirm-delete.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="header">
         <h1><strong> Are you sure?</strong></h1>
-        <mat-icon color="warn" class="icon-size">warning</mat-icon>
+        <mat-icon color="warn" class="warning-icon">warning</mat-icon>
     </div>
     <br>
     <div mat-dialog-content>
