--- a/src/app/pages/confirm-delete/confirm-delete.component.scss
+++ b/src/app/pages/confirm-delete/confirm-delete.component.scss
@@ -1,6 +1,6 @@
 .header{
     text-align: center;
-    .icon-size {
+    .warning-icon {
         font-size: 100px;
         height: 80px;
         width: 250px;
