--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -47,14 +47,14 @@
                         </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="delete">
+                    <!-- <ng-container matColumnDef="delete">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Delete</th>
                         <td mat-cell *matCellDef="let product" class="mat-body-1">
                             <button mat-icon-button color="warn" (click)="DeleteProduct(product.productID)">
                                 <mat-icon>delete</mat-icon>
                             </button>
                         </td>
-                    </ng-container>
+                    </ng-container> -->
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
