--- a/src/app/pages/employee/dialog/employee-edit/employee-edit.component.html
+++ b/src/app/pages/employee/dialog/employee-edit/employee-edit.component.html
@@ -76,17 +76,17 @@
         <div class="row">
             <div>
                 <mat-form-field appearance="outline" class="form-field-width">
-                    <mat-label>Product</mat-label>
-                    <mat-select formControlName="productID">
-                        <mat-option *ngFor="let product of products" [value]="product.productID">
-                            {{ product.productName }}
+                    <mat-label>Manager</mat-label>
+                    <mat-select formControlName="managerID">
+                        <mat-option *ngFor="let manager of managers" [value]="manager.managerId">
+                            {{ manager.managerName }}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
                 <div class="error-container">
-                    <div *ngIf="productID?.touched && productID?.errors?.['required']">
+                    <div *ngIf="managerID?.touched && managerID?.errors?.['required']">
                         <mat-error class="custom-error">
-                            productID is <strong>required</strong>
+                            managerID is <strong>required</strong>
                         </mat-error>
                     </div>
                 </div>
