--- a/src/app/pages/employee/dialog/employee-add/employee-add.component.html
+++ b/src/app/pages/employee/dialog/employee-add/employee-add.component.html
@@ -143,17 +143,17 @@
 
                 <div>
                     <mat-form-field appearance="outline" class="form-field-width">
-                        <mat-label>Product</mat-label>
-                        <mat-select formControlName="productID">
-                            <mat-option *ngFor="let product of products" [value]="product.productID">
-                                {{product.productName}}
+                        <mat-label>Manager</mat-label>
+                        <mat-select formControlName="managerID">
+                            <mat-option *ngFor="let manager of managers" [value]="manager.managerId">
+                                {{manager.managerName}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
                     <div class="error-container">
-                        <div *ngIf="productID?.touched && productID?.errors?.['required']">
+                        <div *ngIf="managerID?.touched && managerID?.errors?.['required']">
                             <mat-error class="custom-error">
-                                Product is <strong>required</strong>
+                                Manager is <strong>required</strong>
                             </mat-error>
                         </div>
                     </div>
