--- a/src/app/pages/manager/dialog/manager-edit/manager-edit.component.html
+++ b/src/app/pages/manager/dialog/manager-edit/manager-edit.component.html
@@ -55,7 +55,7 @@
                       </div>
                 </div>
             </div>
-            <div>
+            <!-- <div>
                 <mat-form-field appearance="outline" class="form-field-width">
                     <mat-label>Product</mat-label>
                     <mat-select formControlName="productID">
@@ -71,7 +71,7 @@
                         </mat-error>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div> 
     </div>
     <div mat-dialog-actions class="action">
