--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -41,7 +41,7 @@
                     <ng-container matColumnDef="edit">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Edit</th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <button mat-icon-button color="primary" (click)="OpenEditProduct(element)">
+                            <button mat-icon-button color="primary" (click)="OpenEditProduct(element)" (click)="$event.stopPropagation()">
                                 <mat-icon>edit</mat-icon>
                             </button>
                         </td>
@@ -57,7 +57,9 @@
                     </ng-container> -->
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns"
+                    [routerLink]="['/dashboard/product/product-details', row.productID]"
+                    ></tr>
                 </table>
             </div>
         </mat-card-content>
