--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -57,8 +57,8 @@
                     </ng-container> -->
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns"
-                    [routerLink]="['/dashboard/product/product-details', row.productID]"
+                    <tr style="cursor: pointer;" mat-row *matRowDef="let row; columns: displayedColumns"
+                    [routerLink]="['/dashboard/product/', row.productID]"
                     ></tr>
                 </table>
             </div>
