--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -56,7 +56,7 @@
               </div>
               <div *ngIf="getUsername()?.errors?.['pattern']">
                 <mat-error class="custom-error">
-                  Username should have at least 6 characters and no spaces allowed.
+                 Invalid username
                 </mat-error>
               </div>
               <div *ngIf="!getUsername()?.hasError('userNotFound') && !getUsername()?.errors?.['required'] && !getUsername()?.errors?.['pattern'] && getUsername()?.dirty">
