--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,125 +1,19 @@
-<div class="row">
-  <div class="col-lg-12">
-    <div class="row">
-      <!-- --------------------------------------------------------------------------- -->
-      <!-- Widgets -->
-      <!-- --------------------------------------------------------------------------- -->
-      <div class="col-lg-3 col-sm-4">
-        <mat-card class="cardWithShadow">
-          <mat-card-header class="d-flex align-items-center p-x-24">
-            <mat-card-title>Products</mat-card-title>
-            <div class="m-l-auto">
-              <button mat-fab color="accent" class="shadow-none icon-48">
-                <i-tabler name="code" class="text-white d-flex"></i-tabler>
-              </button>
-            </div>
-          </mat-card-header>
-          <mat-card-content class="m-b-32 p-x-24">
-            <h4 class="mat-headline-5">{{ TotalProducts }}</h4>
-          </mat-card-content>
-         
-        </mat-card>
-      </div>
-   
-      <div class="col-lg-3 col-sm-4">
-        <mat-card class="cardWithShadow">
-          <mat-card-header class="d-flex align-items-center p-x-24">
-            <mat-card-title>Employees</mat-card-title>
-            <div class="m-l-auto">
-              <button mat-fab color="accent" class="shadow-none icon-48">
-                <i-tabler name="users" class="text-white d-flex"></i-tabler>
-              </button>
-            </div>
-          </mat-card-header>
-          <mat-card-content class="m-b-32 p-x-24">
-            <h4 class="mat-headline-5">{{ TotalEmployees }}</h4>
-          </mat-card-content>
-        </mat-card>
-      </div>
+<div *ngIf="isAdmin; else managerContent">
+    <!-- Admin Dashboard Content -->
+    <app-admin-dashboard></app-admin-dashboard>
+    <!-- Additional admin-specific content -->
+  </div>
 
-      <div class="col-lg-3 col-sm-4">
-        <mat-card class="cardWithShadow">
-          <mat-card-header class="d-flex align-items-center p-x-24">
-            <mat-card-title>Customers</mat-card-title>
-            <div class="m-l-auto">
-              <button mat-fab color="accent" class="shadow-none icon-48">
-                <i-tabler name="user-plus" class="text-white d-flex"></i-tabler>
-              </button>
-            </div>
-          </mat-card-header>
-          <mat-card-content class="m-b-32 p-x-24">
-            <h4 class="mat-headline-5">{{TotalCustomers}}</h4>
-          </mat-card-content>
-        </mat-card>
-      </div>
-
-      <div class="col-lg-3 col-sm-4">
-        <mat-card class="cardWithShadow">
-          <mat-card-header class="d-flex align-items-center p-x-24">
-            <mat-card-title>Departments</mat-card-title>
-            <div class="m-l-auto">
-              <button mat-fab color="accent" class="shadow-none icon-48">
-                <i-tabler name="briefcase" class="text-white d-flex"></i-tabler>
-              </button>
-            </div>
-          </mat-card-header>
-          <mat-card-content class="m-b-32 p-x-24">
-            <h4 class="mat-headline-5">{{ TotalDepartments }}</h4>
-          </mat-card-content>
-
-        </mat-card>
-      </div>
+  <ng-template #managerContent>
+    <div *ngIf="isManager; else employeeContent">
+      <!-- Manager Dashboard Content -->
+      <app-manager-dashboard></app-manager-dashboard>
+      <!-- Additional manager-specific content -->
     </div>
-  </div>
 
-  <div class="col-lg-7">
-    <mat-card class="cardWithShadow">
-      <mat-card-content class="p-24">
-        <div class="d-flex w-100">
-          <mat-card-title>Overview</mat-card-title>
-          <div class="m-l-auto">
-          </div>
-        </div>
-
-        <ng-container *ngIf="chartOptions">
-          <apx-chart
-          [series]="chartOptions.series"
-          [dataLabels]="chartOptions.dataLabels"
-          [chart]="chartOptions.chart"
-          [legend]="chartOptions.legend"
-          [xaxis]="chartOptions.xaxis"
-          [yaxis]="chartOptions.yaxis"
-          [grid]="chartOptions.grid"
-          [stroke]="chartOptions.stroke"
-          [tooltip]="chartOptions.tooltip"
-          [plotOptions]="chartOptions.plotOptions"
-        ></apx-chart>
-        </ng-container>
-      </mat-card-content>
-    </mat-card>
-  </div>
-
-  <div class="col-lg-5">
-    <mat-card class="cardWithShadow">
-      <mat-card-content class="p-24">
-        <div class="d-flex w-100">
-          <mat-card-title>Revenue Stat</mat-card-title>
-          <div class="m-l-auto">
-          </div>
-        </div>
-        <ng-container *ngIf="chartOptions">
-        <apx-chart
-        [series]="chartOption.series"
-        [chart]="chartOption.chart"
-        [labels]="chartOption.labels"
-        [title]="chartOption.title"
-        [theme]="chartOption.theme"
-        [responsive]="chartOption.responsive"
-        ></apx-chart>
-        </ng-container>
-      </mat-card-content>
-    </mat-card>
-  </div>
-
- 
- 
+    <ng-template #employeeContent>
+      <!-- Employee Dashboard Content -->
+      <app-employee-dashboard></app-employee-dashboard>
+      <!-- Additional employee-specific content -->
+    </ng-template>
+  </ng-template>
