--- a/src/app/pages/department/department-details/department-details.component.html
+++ b/src/app/pages/department/department-details/department-details.component.html
@@ -1,24 +1,24 @@
 <div class="col-lg-12">
     <mat-card class="cardWithShadow">
         <mat-card-title class="d-flex justify-content-between p-10">
-            {{EmployeesAndManagerDetails?.productName}}            
-            <h3>{{EmployeesAndManagerDetails?.managerName}}</h3>
+            <h3>Department: {{ EmployeesAndManagerDetails?.departmentName }}</h3>
+            <h3>Manager: {{ EmployeesAndManagerDetails?.isAppointed ? EmployeesAndManagerDetails?.managerName : 'Not Appointed' }}</h3>
         </mat-card-title>
     </mat-card>
     <mat-card class="cardWithShadow">
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
-                <div layout="row" layout-align="center center  ">
-                  Employees
+                <div layout="row" layout-align="center center">
+                    Employees
                 </div>
                 <div fxLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center">
                 </div>
-              </mat-card-title>
+            </mat-card-title>
             <div class="table-responsive m-t-16">
-                <table  mat-table [dataSource]="dataSource" class="w-100" matSort>
+                <table *ngIf="dataSource" mat-table [dataSource]="dataSource" class="w-100" matSort>
                     <!-- Position Column -->
                     <ng-container matColumnDef="name">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                             Name
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -28,7 +28,7 @@
 
                     <!-- Name Column -->
                     <ng-container matColumnDef="age">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                             Age
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -38,7 +38,7 @@
 
                     <!-- Weight Column -->
                     <ng-container matColumnDef="salary">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                             Salary
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -48,29 +48,21 @@
 
                     <!-- Symbol Column -->
                     <ng-container matColumnDef="department">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                             Department
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.departmentName }}
+                            {{ EmployeesAndManagerDetails?.departmentName }}
                         </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="product">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-                            Product
-                        </th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.productName }}
-                        </td>
-                    </ng-container>
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
                 </table>
+                <div *ngIf="!dataSource" class="no-data-message">No data available.</div>
             </div>
         </mat-card-content>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" > </mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5"></mat-paginator>
     </mat-card>
-
 </div>
