--- a/src/app/pages/department/department.component.html
+++ b/src/app/pages/department/department.component.html
@@ -37,17 +37,13 @@
                         </td>
                     </ng-container>
 
-                    <!-- <ng-container matColumnDef="delete">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Delete</th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <button mat-icon-button color="warn" (click)="DeleteDepartment(element.departmentID)">
-                                <mat-icon>delete</mat-icon>
-                            </button>
-                        </td>
-                    </ng-container> -->
-
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                    <tr style="cursor: pointer;"
+                     mat-row *matRowDef="let row; 
+                     columns: displayedColumns"
+                     [routerLink]="['/dashboard/departments/', row.departmentID]"
+
+                     ></tr>
                 </table>
             </div>
         </mat-card-content>
