--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -41,7 +41,7 @@
                             Manager
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.managerName }}
+                            <strong>{{ element.managerIsAppointed ? element.managerName : 'Not Appointed' }}</strong>
                         </td>
                     </ng-container>
 
@@ -52,15 +52,6 @@
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
                             {{ element.departmentName }}
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="product">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-                            Product
-                        </th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.productName }}
                         </td>
                     </ng-container>
 
