--- a/src/app/pages/manager/manager.component.html
+++ b/src/app/pages/manager/manager.component.html
@@ -67,12 +67,12 @@
                     </ng-container>
                     
 
-                    <ng-container matColumnDef="product">
+                    <ng-container matColumnDef="department">
                         <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-                            Product
+                            department
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.productName }}
+                            {{ element.departmentName }}
                         </td>
                     </ng-container>
 
