--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -9,8 +9,8 @@
   <!-- Notification Dropdown -->
   <!-- --------------------------------------------------------------- -->
 
-  <button mat-icon-button aria-label="Notifications">
-    <i-tabler class="d-flex" name="bell" matBadge="2" matBadgeColor="primary"></i-tabler>
+  <button mat-icon-button aria-label="Notifications" *ngIf="showBellIcon">
+    <i-tabler class="d-flex" name="bell" [matBadge]="newTaskCount" matBadgeColor="primary"></i-tabler>
   </button>
 
   <span class="flex-1-auto"></span>
