--- a/src/app/pages/employee/task-completed/task-completed/task-completed.component.html
+++ b/src/app/pages/employee/task-completed/task-completed/task-completed.component.html
@@ -3,7 +3,7 @@
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
                 <div layout="row" layout-align="center center">
-                   New Tasks
+                   Completed Tasks
                 </div>
                 <mat-form-field>
                     <mat-label>Filter</mat-label>
@@ -36,7 +36,7 @@
                             Due Date
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
-                            {{ task.taskDueDate }}
+                            {{ task.taskDueDate | date }}
                         </td>
                     </ng-container>
 
@@ -45,19 +45,12 @@
                             Task Status
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
+                            <span class="bg-light-success text-success rounded f-w-600 p-6 p-y-4 f-s-12">
                             {{ getStatusFromNumber(task.taskStatus) }}
+                        </span>
                         </td>
                     </ng-container>
 
-                    <!-- Action Column -->
-                    <ng-container matColumnDef="edit">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Edit</th>
-                        <td mat-cell *matCellDef="let task" class="mat-body-1">
-                            <button mat-icon-button color="primary" (click)="OpenEditEmployeeTask(task)">
-                                <mat-icon>edit</mat-icon>
-                            </button>
-                        </td>
-                    </ng-container>
 
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -68,4 +61,5 @@
         <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" > </mat-paginator>
     </mat-card>
 </div>
+
 
