--- a/src/app/pages/employee/task-new/task-new.component.html
+++ b/src/app/pages/employee/task-new/task-new.component.html
@@ -3,7 +3,7 @@
         <mat-card-content class="p-24">
             <mat-card-title class="title-flex-container">
                 <div layout="row" layout-align="center center">
-                   Pending Tasks
+                   New Tasks
                 </div>
                 <mat-form-field>
                     <mat-label>Filter</mat-label>
@@ -45,7 +45,7 @@
                             Task Status
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
-                            <span class="bg-light-error text-error rounded f-w-600 p-6 p-y-4 f-s-12">
+                            <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">
                             {{ getStatusFromNumber(task.taskStatus) }}
                         </span>
                         </td>
@@ -55,7 +55,7 @@
                     <ng-container matColumnDef="edit">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Update Task</th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
-                            <button mat-icon-button color="primary" (click)="OpenEditEmployeeTask(task)" >
+                            <button mat-icon-button color="primary" (click)="OpenEditEmployeeTask(task)">
                                 <mat-icon>edit</mat-icon>
                             </button>
                         </td>
