--- a/src/app/pages/employee/task-ongoing/task-ongoing.component.html
+++ b/src/app/pages/employee/task-ongoing/task-ongoing.component.html
@@ -9,9 +9,6 @@
                     <mat-label>Filter</mat-label>
                         <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
                 </mat-form-field>
-                <div>
-                    <button mat-raised-button color="primary"  >Create</button>
-                </div>
             </mat-card-title>
             <div class="table-responsive m-t-16">
                 <table  mat-table [dataSource]="dataSource" class="w-100" matSort>
@@ -39,7 +36,7 @@
                             Due Date
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
-                            {{ task.taskDueDate }}
+                            {{ task.taskDueDate | date }}
                         </td>
                     </ng-container>
 
@@ -48,13 +45,15 @@
                             Task Status
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
+                            <span class="bg-light-warning text-warning rounded f-w-600 p-6 p-y-4 f-s-12">
                             {{ getStatusFromNumber(task.taskStatus) }}
+                            </span>
                         </td>
                     </ng-container>
 
                     <!-- Action Column -->
                     <ng-container matColumnDef="edit">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Edit</th>
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Update Task</th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
                             <button mat-icon-button color="primary" (click)="OpenEditEmployeeTask(task)">
                                 <mat-icon>edit</mat-icon>
