--- a/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
@@ -10,7 +10,7 @@
               <mat-card-title>New </mat-card-title>
               <div class="m-l-auto">
                 <button mat-fab color="accent" class="shadow-none icon-48">
-                  <i-tabler name="code" class="text-white d-flex"></i-tabler>
+                  <i-tabler name="notification" class="text-white d-flex"></i-tabler>
                 </button>
               </div>
             </mat-card-header>
@@ -27,7 +27,7 @@
               <mat-card-title>InProgress</mat-card-title>
               <div class="m-l-auto">
                 <button mat-fab color="accent" class="shadow-none icon-48">
-                  <i-tabler name="users" class="text-white d-flex"></i-tabler>
+                  <i-tabler name="calendar-stats" class="text-white d-flex"></i-tabler>
                 </button>
               </div>
             </mat-card-header>
@@ -43,7 +43,7 @@
               <mat-card-title>Pending</mat-card-title>
               <div class="m-l-auto">
                 <button mat-fab color="accent" class="shadow-none icon-48">
-                  <i-tabler name="user-plus" class="text-white d-flex"></i-tabler>
+                  <i-tabler name="alert-circle-filled" class="text-white d-flex"></i-tabler>
                 </button>
               </div>
             </mat-card-header>
@@ -59,7 +59,7 @@
               <mat-card-title>Completed</mat-card-title>
               <div class="m-l-auto">
                 <button mat-fab color="accent" class="shadow-none icon-48">
-                  <i-tabler name="domain_verification" class="text-white d-flex"></i-tabler>
+                  <i-tabler name="checkbox" class="text-white d-flex"></i-tabler>
                 </button>
               </div>
             </mat-card-header>
