Delete Employee Task

--- a/src/app/pages/manager/dialog/task-edit/task-edit.component.html
+++ b/src/app/pages/manager/dialog/task-edit/task-edit.component.html
@@ -62,6 +62,6 @@
     </div>
     <div mat-dialog-actions class="action">
         <button mat-raised-button type="button" [mat-dialog-close]="false"> Cancel</button>
-        <button mat-raised-button color="primary" type="submit" [disabled]="editTaskForm.invalid"> Create </button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="editTaskForm.invalid"> Edit </button>
     </div>
 </form>
