--- a/src/app/pages/manager/employee-task/employee-task.component.html
+++ b/src/app/pages/manager/employee-task/employee-task.component.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-lg-4">
         <mat-card class="cardWithShadow">
-            <mat-card-content>
+            <mat-card-content class="p-24">
                 <mat-card-title class="title-flex-container">
                     <div layout="row" layout-align="center center">
                         Employee Details
-                    </div> <br> <br> <br>
-                </mat-card-title>
+                    </div> 
+                </mat-card-title><br> 
                 <div *ngIf="employeeDetails" >
                   <div >
                     <div class="data-item">
@@ -101,7 +101,7 @@
 
                         <!-- Action Column -->
                         <ng-container matColumnDef="info">
-                            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14"></th>
+                            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Info</th>
                             <td mat-cell *matCellDef="let element" class="mat-body-1">
                                 <ng-container>
                                     <button mat-icon-button color="primary" (click)="OpenTaskDescription(element.taskDescription)">
@@ -112,10 +112,19 @@
                         </ng-container>
 
                         <ng-container matColumnDef="edit" >
-                            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14"></th>
+                            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Edit</th>
                             <td mat-cell *matCellDef="let element" class="mat-body-1">
                                 <button mat-icon-button color="primary" (click)="OpenEditTask(element)">
                                     <mat-icon>edit</mat-icon>
+                                </button>
+                            </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="delete">
+                            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Delete</th>
+                            <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                <button mat-icon-button color="warn" (click)="DeleteTask(element.taskID)">
+                                    <mat-icon>delete</mat-icon>
                                 </button>
                             </td>
                         </ng-container>
